Made the sports page navbar sticky Fixed broken links on the tiidelab and sports page Changed hover effect for the nav-links on all pages Reduced the height of the nav menu on mobile view

--- a/css/sports.css
+++ b/css/sports.css
@@ -21,6 +21,9 @@ header {
   margin-right: 0;
   margin-left: 0;
   background: linear-gradient(to right, #2bb7da, #31d35c);
+  position: sticky;
+  top: 0px;
+  left: 0px;
 }
 nav {
   display: flex;
@@ -61,28 +64,11 @@ nav {
   color: white;
 }
 /* hover styles for the nav-link */
-.nav-link {
-  position: relative;
-  font-size: 25px;
-}
-.nav-link:before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  display: block;
-  height: 5px;
-  background: black;
-  left: 0;
-  right: 0;
-  bottom: -2.3825rem;
-  opacity: 0;
-}
+
 .nav-link:hover {
   opacity: 0.85;
 }
-.nav-link:hover::before {
-  opacity: 0.75;
-}
+
 .nav-call-to-action {
   margin-right: 2rem;
 }
@@ -725,9 +711,6 @@ footer hr {
   }
 }
 @media (max-width: 750px) {
-  header {
-    position: relative;
-  }
   .header-logo {
     margin-left: -1.5rem;
   }
@@ -781,7 +764,7 @@ footer hr {
   .nav-checkbox:checked ~ .nav-links .nav-menu {
     background: linear-gradient(to right, #2bb7da, #31d35c);
     opacity: 1.5;
-    height: 63vh;
+    height: 50vh;
     padding-top: 2rem;
     border-radius: 3px;
   }
@@ -1009,16 +992,14 @@ footer hr {
     width: 200px;
     height: 50px;
   }
-
-
-} 
+}
 
 @media only screen and (max-width: 479px) {
   main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
   }
 
   .sports-wrapper {
@@ -1138,7 +1119,6 @@ footer hr {
   }
   .body-advert {
     display: contents;
-
   }
 
   .body-advert-image {
@@ -1148,10 +1128,9 @@ footer hr {
 
   .section-news-content-container,
   .news-content-container {
-
-  } 
-  .section-news-content-container, .news-content-container {
-
+  }
+  .section-news-content-container,
+  .news-content-container {
     display: flex;
     gap: 40px;
     margin-top: 20px;
